# project-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap-deps.win  bootstrap.cmd  build.cmd  env.cmd  main.cpp
